# Ultimate-Tic-Tac-Toe

./: .gitignore  CMakeLists.txt  MCTS.hpp  NeuralNetwork.hpp  README.md  StateInfo.h  UTTTGameState.cpp  UTTTGameState.h  UTTTGameWindow.cpp  UTTTGameWindow.h  UTTTNet.h  main.cpp  trainer.cpp
Release/: UTTT.exp  UTTT.lib  config.txt  log.txt  temp.ex  trainer.exp  trainer.lib
